2006-01-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_window_visibility_notify_event): Removed
	gdk_window_is_visible() check. It doesn't work for foreign windows and
	it's not actually needed.
	N#18225

2006-01-04  Johan Bilien  <johan.bilien@nokia.com>

	Backported from 2.8:

	* gdk/gdkwindow.h
	* gdk/x11/gdkwindow-x11.c: Added gdk_window_set_urgency_hint()
	* gdk/x11/gdkwindow-x11.h (struct _GdkTopLevelX11): added urgency_hint
	* gdk/x11/gdkwindow-x11.c (update_wm_hints): update XUrgencyHint
	* gtk/gtkwindow.h
	* gtk/gtkwindow.c: added GtkWindow::urgency-hint property and
	gtk_window_{get,set}_urgency_hint()

Tue Nov  1 16:18:24 2005  Tim Janik  <timj@imendio.com>

	* gtk/gtkrbtree.[hc]: get rid of GAllocator usage, allocate and free 
	nodes via the g_slice_*() API.
	_gtk_rbtree_new(): fixed wrong node allocation via g_new().

Thu Nov 24 18:25:58 2005  Tim Janik  <timj@imendio.com>

	* gtk/gtkmenushell.h (struct _GtkMenuShellClass): moved ::close signal
	vmethod handler to structure end and removed a reseved function pointer.
	this restore binary compatibility with GtkMenuShell from gtk+-2.6.10.

Thu Nov 24 18:06:08 2005  Tim Janik  <timj@imendio.com>

	* gtk/gtkcalendar.h: removed ::erroneous_date and ::selected_date 
	vmethods from GtkCalendarClass. this restores binary compatibility
	of the calendar ABI with gtk+-2.6.10.

	* gtk/gtkcalendar.c:
	gtk_calendar_class_init(): create ::erroneous_date and ::selected_date
	signals without a default handler.

2005-11-14  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcellrenderertoggle.c: merged removal of redundant
	g_object_notify() from upstream. Some formatting cleanups.

Tue Nov  8 17:05:20 2005  Tim Janik  <timj@imendio.com>

	* configure.in:
	* gtk/gtklabel.c: removed outdated DISABLE_KEYBOARD_SHORTCUTS
	handling case. whitespace fixups according to upstream.

2005-11-03  Tommi Komulainen  <tommi.komulainen@nokia.com>
