@@ -1,5 +1,12 @@
 2006-01-05  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
+	* gtk/gtkwidget.c (timeout_tap_and_hold_animation): use pixbuf options
+	'x_hot' and 'y_hot' to determine animation hotspot, if defined;
+	otherwise, set hotspot to animation center
+	N#20212
+
+2006-01-05  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
 	* gtk/gtkmenu.c (gtk_menu_window_visibility_notify_event): Removed
 	gdk_window_is_visible() check. It doesn't work for foreign windows and
 	it's not actually needed.
